--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,3 @@
-# local package
--e .
-
-# external requirements
 click
 Sphinx
 coverage
@@ -9,3 +5,4 @@ awscli
 flake8
 python-dotenv>=0.5.1
 wget
+boto3
